--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
         <title>(Fake)Nasa Contact Page</title>
         <link rel="stylesheet" href="./style.css">
     </head>
-    <header>
+    <header class="containter">
         <img src="./Space.jpg" id="spaceimg" alt="A picture of the Milky Way">
+        <h1 class= "centered">NASA</h1>
     </header>
     <section>
         <article id="first column" alt="Social Media pages are listed below">
