Fixed a typo (containter)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>(Fake)Nasa Contact Page</title>
         <link rel="stylesheet" href="./style.css">
     </head>
-    <header class="containter">
+    <header class="container">
         <img src="./Space.jpg" id="spaceimg" alt="A picture of the Milky Way">
         <h1 class= "centered">NASA</h1>
     </header>
